prevent image stretching

--- a/app/assets/stylesheets/tracks/tracks-index-base.scss
+++ b/app/assets/stylesheets/tracks/tracks-index-base.scss
@@ -47,6 +47,7 @@
         img {
           height: 150px;
           width: 150px;
+          object-fit: cover;
         }
 
         .track-content {
